syntax = "proto3";

package nfpb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/nfpb";

message Genre {
  int32                     genreID   = 1;
  string                    genreName = 2;
  google.protobuf.Timestamp createdAt = 3;
}