syntax = "proto3";

package nfpb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/nfpb";

message LanguageRequest {
  string LanguageCode = 1;
  string LanguageName = 2;
}

message LanguageResponse {
  int32                     LanguageID   = 1;
  string                    LanguageCode = 2;
  string                    LanguageName = 3;
  google.protobuf.Timestamp createdAt    = 4;
}